fix: add comment moved to modal + username alignment fix

--- a/only-buns/src/app/posts/post-feed/post-feed.component.css
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.css
@@ -6,20 +6,39 @@
 
 .post-header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding-bottom: 15px;
+  position: relative; 
 }
 
 .profile-image {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-right: 10px;
+  object-fit: cover;
+  margin: 0;
+  padding: 0;
 }
 
 .username {
-  font-weight: bold;
+  font-size: 1em;
   color: #333;
+  font-weight: bold;
+  margin: 0;
+}
+
+.user-profile {
+  width: 40px; 
+  height: 40px;
+  border-radius: 50%; 
+  object-fit: cover;
+}
+
+.username-and-picture {
+  display: flex;
+  align-items: center; 
+  gap: 10px; 
 }
 
 .post-image img {
@@ -61,8 +80,8 @@
   margin: 20px 0;
 }
 
+
 .kebab-menu {
-  margin-left: 420px; 
   font-size: 1.2em;
   color: #777;
   cursor: pointer;
@@ -99,7 +118,7 @@ i {
 }
 
 .dropdown-menu {
-  position: absolute;
+  position: absolute; 
   right: 0; 
   top: 35px; 
   background-color: white;
